test/cases/initialisation/invalid/incomplete_array_struct.c
// RUN: %check -e %s
struct A x[] = {{{{}}}}; // CHECK: error: initialising incomplete type 'struct A[]'
